@startuml
'https://plantuml.com/class-diagram

class MainWindow

class ControlPanel
ControlPanel ..> Field
ControlPanel ..> GameLoop

class SimulationCanvas
Config <.. SimulationCanvas
SimulationCanvas --> Field

class StatisticsPanel
StatisticsPanel --> Statistics

class Statistics
Statistics ..> Field

class GameLoop
Config <.. GameLoop
GameLoop --> SimulationCanvas

class Field
Field o-- Animal

abstract class Animal
Animal -- DrawingComponent
Animal -- MoveComponent
Animal -- PositionComponent

interface DrawingComponent
Animal <.. DrawingComponent

interface MoveComponent
Animal <.. MoveComponent
Field <.. MoveComponent

interface PositionComponent
Animal <.. PositionComponent

class ObjectDrawingComponent
DrawingComponent <|.. ObjectDrawingComponent
Config <.. ObjectDrawingComponent

class ObjectPositionComponent
PositionComponent <|.. ObjectPositionComponent
Config <.. ObjectPositionComponent

class RabbitMoveComponent
MoveComponent <|.. RabbitMoveComponent

class FoxMoveComponent
MoveComponent <|.. FoxMoveComponent

class Rabbit
Animal <|-- Rabbit
ObjectDrawingComponent <.. Rabbit
RabbitMoveComponent <.. Rabbit
ObjectPositionComponent <.. Rabbit

class Fox
Animal <|-- Fox
ObjectDrawingComponent <.. Fox
FoxMoveComponent <.. Fox
ObjectPositionComponent <.. Fox


@enduml
